2016-06-22  Pedro Alves  <pedro@palves.net>

	* src/GdbServer.cpp (GdbServer::rspUnknownPacket): New method.
	(GdbServer::rspClientRequest): Use rspUnknownPacket.  Remove
	handling of 'A', 'b', 'B', 'd', 'i', 'I', 'r', 'qCRC',
	'qGetTLSAddr', 'qL', 'qOffsets', 'qP' and 'qSymbol'.
	(GdbServer::rspSet): Remove handling of QPassSignals.  Use
	rspUnknownPacket and don't delete the packet.
	(GdbServer::rspVpkt): Remove handling of 'vFile' 'vFlashErase',
	'vFlashWrite' and 'vFlashDone'.  Use rspUnknownPacket.
	* src/GdbServer.h (GdbServer::rspUnknownPacket): Declare.

2014-10-29  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* src/GdbServer.cpp (GdbServer::rspRemoveMatchpoint): Ensure
	breakpoints are set in all threads.
	(GdbServer::rspInsertMatchpoint): Likewise.
	* src/TargetControl.h: Add isLocalAddr () as public pure virtual
	method.
	* src/TargetControlHardware.cpp
	(TargetControlHardware::isLocalAddr): Created.
	(TargetControlHardware::convertAddress): Use isLocalAddr.
	* src/TargetControlHardware.h: Add isLocalAddr () as public
	method.

2014-10-24  Ola Jeppsson  <ola@adapteva.com>

	* src/main.cpp (getDefaultHdfFile):
	New function. Use path relative to the e-server binary to determine
	default XML HDF file path.
	(main): Get default HDF file from getDefaultHdfFile() if user did not
	explicitly specify it with "-hdf".

2014-10-08  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* e-server.sh: Remove environment variable dependencies in a
	movable way.

2014-10-08  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	Remove assertion side effects and document reversions.

	* e-server.sh: Don't use sudo.
	* src/GdbServer.cpp (GdbServer::initProcesses):
	Remove side-effects from assert.
	(GdbServer::rspQuery): Ignore qNonStop packets.
	(GdbServer::rspCmdWorkgroup): Ignore qNonStop packets.  Remove
	side-effects from assert.
	(GdbServer::getThread): Better error message.
	(GdbServer::stopAttachedProcesses): Deleted.